[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/main/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/themes/digital_panels.tres" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="MainMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -158.5
margin_right = 159.0
margin_bottom = 158.5
custom_styles/panel = SubResource( 1 )

[node name="TitleLabel" type="RichTextLabel" parent="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -325.0
margin_right = 250.0
margin_bottom = -225.0
custom_fonts/normal_font = SubResource( 2 )
text = "CVs please"

[node name="StartGameButton" type="Button" parent="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -93.0
margin_right = 75.0
margin_bottom = -43.0
theme = ExtResource( 3 )
text = "Start Game"

[node name="CloseGameButton" type="Button" parent="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_right = 75.0
margin_bottom = 25.0
text = "Close"
